# stock-tracker

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs  models.rs
backend/src/api/: flow.rs  mod.rs  sectors.rs  stocks.rs
backend/src/services/: edgar.rs  indicators.rs  mod.rs  sectors_static.rs  yahoo.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: BuySignalBadge.tsx  Navbar.tsx  SectorHeatmap.tsx  StockCard.tsx  TechnicalChart.tsx
frontend/src/context/: MarketContext.tsx
frontend/src/pages/: CapitalFlow.tsx  Dashboard.tsx  Portfolio.tsx  Screener.tsx  SectorRotation.tsx  StockDetail.tsx  TurnoverRanking.tsx
frontend/src/utils/: twNames.ts
worker/: Cargo.toml  package.json  wrangler.toml
worker/src/: flow.rs  lib.rs  models.rs  sectors.rs  sectors_static.rs  stocks.rs  yahoo.rs
