[package]
name = "stock-tracker-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stock-tracker-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
